fixed multiple scrollbars on chromium

--- a/source/subway/css/base.css
+++ b/source/subway/css/base.css
@@ -30,7 +30,7 @@ html, body {
 	font-size: 18px;
 	background-color: #1e1e1e;
 	font-family: Roboto, 'Noto Sans SC', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	overflow-y: scroll;
+	/* overflow-y: scroll; */
 	scrollbar-color: var(--fgSecondary) var(--bgColor);
 }
 
@@ -211,16 +211,10 @@ div.titleWrapper {
 #container {
 	background-color: var(--bgColor);
 	color: var(--fgColor);
-	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
-	height: 100%;
-	overflow: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	transition: scale 1s var(--easeOutExpo);
 }
 
 header {
